projection and screen done

--- a/index.html
+++ b/index.html
@@ -3,3 +3,35 @@ layout: page
 <!-- layout: home -->
 # Index page
 ---
+
+<html>
+<head>
+    <!-- <title>Welcome!</title> -->
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
+    </style>
+</head>
+
+<body>
+    <h1> Welcome! </h1>
+    <p> this is testing</p>
+
+
+</body>
+
+
+
+</html>
+
+
+<!-- - Screen Hull: white acrylic 1/4'' (6mm)
+    - Any non-magnetic material can work. We chose acrylic becasue it was easy to iterate prototypes with our laser cutter. -->
