comment out html in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 # Index page
 ---
 
-<html>
+<!-- <html>
 <head>
     <!-- <title>Welcome!</title> -->
     <style>
@@ -30,7 +30,7 @@ layout: page
 
 
 
-</html>
+</html> -->
 
 
 <!-- - Screen Hull: white acrylic 1/4'' (6mm)
