comment out everything

--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@ layout: page
 # Index page
 ---
 
-<!-- <html>
-<head>
+<!-- <html> -->
+<!-- <head> -->
     <!-- <title>Welcome!</title> -->
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
+    <!-- <style> -->
+        <!-- body { -->
+            <!-- font-family: Arial, Helvetica, sans-serif; -->
+            <!-- text-align: center; -->
+            <!-- padding: 50px; -->
+        <!-- }
         h1 {
             font-size: 36px;
             margin-bottom: 20px;
-        }
+        } -->
 
-    </style>
-</head>
+    <!-- </style>
+</head> -->
 
-<body>
+<!-- <body>
     <h1> Welcome! </h1>
     <p> this is testing</p>
 
 
-</body>
+</body> -->
 
 
 
-</html> -->
+<!-- </html> -->
 
 
 <!-- - Screen Hull: white acrylic 1/4'' (6mm)
